--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,27 @@
         such as initializing an element and then attaching it to a parent.
         To create a Composable function, you add the @Composable annotation to the function name.
     </string>
+    <string name="task_completed">All tasks completed</string>
+    <string name="nice_work">Nice work!</string>
+    <string name="first_row">Text composable</string>
+    <string name="first_row_content">
+        Displays text and follows the recommended Material Design guidelines.
+    </string>
+    <string name="second_row">Image composable</string>
+    <string name="second_row_content">
+        Creates a composable that lays out and draws a given Painter class object.
+    </string>
+    <string name="third_row">Row composable</string>
+    <string name="third_row_content">
+        A layout composable that places its children in a horizontal sequence.
+    </string>
+    <string name="fourth_row">Column composable</string>
+    <string name="forth_row_content">
+        A layout composable that places its children in a vertical sequence.
+    </string>
+    <string name="name">Karthikeyan</string>
+    <string name="title">Android developer</string>
+    <string name="phone_no">+91 88389 55205</string>
+    <string name="git_profile">/github.com/Karthikn-n</string>
+    <string name="email">karthikn11092001@gmail.com</string>
 </resources>
