--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,12 @@
     <string name="email">karthikn11092001@gmail.com</string>
     <string name="roll">Roll</string>
     <string name="next">Next</string>
+    <string name="lemonTreeTab">Tap the lemon tree to select a lemon</string>
+    <string name="lemonTab">Keep tapping the lemon to squeeze it</string>
+    <string name="lemonadeTab">Tap the lemonade to drink it</string>
+    <string name="emptyTab">Tap the empty glass to start again</string>
+    <string name="lemonTree">Lemon tree</string>
+    <string name="lemon">Lemon</string>
+    <string name="lemonade">Glass of lemonade</string>
+    <string name="empty">Empty glass</string>
 </resources>
